<resources>
    <string name="app_name">ARganic Molecule</string>
    <string name="task1">task1</string>
    <string name="A7">PBD Web Service</string>
    <string name="database">Database</string>
    <string name="ar">AR</string>
    <string name="search">Search</string>
    <string name="enter_common_name">Enter common name</string>
    <string name="arganic_molecule">ARganic Molecule</string>
    <string name="team_name">Team Name:</string>
    <string name="launch_webView">Launch WebView</string>
    <string name="launch_webservice">Launch WebService</string>
    <string name="button3">Team Name:</string>
    <string name="enter_id_name_date">Enter ID/Name/Date</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="search_by">Search By:</string>
    <string name="molecule_summary">Molecule Summary</string>
    <string name="like">Like</string>
    <string name="json_output">JSON Output</string>
    <string name="loading">Loading...</string>
    <string name="back">Back</string>
    <string name="stickers_received">Stickers received</string>
    <string name="sticker_sent_by">Sticker sent to:</string>
    <string name="username">Username</string>
    <string name="received_date">Date</string>
    <string name="received_time">Time</string>
    <string name="send_ticker">Send Sticker</string>
    <string name="send_to">Send To</string>
    <string name="tap_on_recycler_view">Tap on any sticker above to Send</string>
    <string name="recent_sticker_received">Recent sticker received by user:</string>
    <string name="send">Send</string>
    <string name="show_history">Show History</string>
    <string name="guidence_text">Note: Select the Catergory and then the Amino acid</string>
    <string name="protein">Amino acid\"</string>
    <string name="category">Chart key, Category</string>
    <string name="confirm">Confirm</string>
    <string name="ARview">View the AR model for this molecule</string>
    <string name="shakeDevice">Shake your device to animate the image
        and launch the 3D AR view
    </string>
    <string name="molecule_id">ID</string>
    <string name="sample_id_hint">Hint: Enter CFF to search</string>
    <string name="like_button">Like</string>
    <string name="formula">Formula</string>
    <string name="formula_weight">Formular Weight</string>
    <string name="molecule_name">Name</string>
    <string name="molecule_username">Username</string>

    <string-array name="array_category">
        <item>Select Category</item>
        <item>ALIPHATIC</item>
        <item>AROMATIC</item>
        <item>ACIDIC</item>
        <item>
        BASIC</item>
        <item>HYDROXYLIC</item>
        <item>SULFUR_CONTAINING</item>
        <item>AMIDIC</item>
        <item>ESSENTIAL</item>
        <item>NON-ESSENTIAL</item>
    </string-array>

    <string-array name="array_amino">
        <item>Select Amino acide</item>
    </string-array>
    <string-array name="array_aliphatic">
        <item>Alanine</item>
        <item>Glycine</item>
        <item>Isoleucine</item>
        <item>Leucine</item>
        <item>Proline</item>
        <item>Valine</item>
    </string-array>
    <string-array name="array_aromatic">
        <item>Phenylalanine</item>
        <item>Tryptophan</item>
        <item>Tyrosine</item>
    </string-array>
    <string-array name="array_acidic">
        <item>Aspartic-Acid</item>
        <item>Glutamic-Acid</item>
    </string-array>
    <string-array name="array_basic">
        <item>Arginine</item>
        <item>Histidine</item>
        <item>Lysine</item>
    </string-array>
    <string-array name="array_hydroxylic">
        <item>Serine</item>
        <item>Threonine</item>
    </string-array>

    <string-array name="array_sulfur_containing">
        <item>Cysteine</item>
        <item>Methionine</item>
    </string-array>
    <string-array name="array_amidic">
        <item>Asparagine</item>
        <item>Glutamine</item>
    </string-array>
    <string-array name="array_essential">
        <item>Alanine</item>
        <item>Glycine</item>
        <item>Proline</item>
        <item>Tyrosine</item>
        <item> Aspartic Acid</item>
        <item>Glutamic Acid</item>
        <item>Arginine</item>
        <item>Serine</item>
        <item>Cysteine</item>
        <item>Asparagine</item>
        <item>Glutamine</item>
    </string-array>
    <string-array name="array_non_essential">
        <item>Methionine</item>
        <item>Threonine</item>
        <item>Lysine</item>
        <item>Histidine</item>
        <item>Tryptophan</item>
        <item>Phenylalanine</item>
        <item>Valine</item>
        <item>Leucine</item>
        <item>Isoleucine</item>
    </string-array>
</resources>