<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".A9.AR_Activity">

    <TextView
        android:id="@+id/guidence_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guidence_text"
        android:padding="6dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="#555555"/>

    <TextView
        android:id="@+id/textview_category_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guidence_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="6dp"
        android:text="@string/category"
        android:textColor="#555555"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_category_key"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textview_amino_acide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_categories"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="6dp"
        android:text="@string/protein"
        android:textColor="#555555"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/amino_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_amino_acide"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-2dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/submit_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_amino_acide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/confirm"
        android:textAlignment="center" />

</RelativeLayout>